# cmake-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
app/: CMakeLists.txt  advanced_main.cpp  main.cpp
cmake/: StandardProjectSettings.cmake
include/: lib.hpp
src/: lib.cpp
test/: CMakeLists.txt  tst_lib.cpp
